[metadata]
name = hello-fresh
version = 1.0.0
author = Michael Ciccotosto-Camp
url = https://github.com/Michae1CC/hello-food
license = LICENSE

[options]
install_requires = flask
python_requires = >=3.11

[options.extras_require]
dev =
    black
    mypy
    pre-commit
test = pytest

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false