[metadata]
name = hello_fresh
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Michae1CC/hello-food
author = Michael Ciccotosto-Camp
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    flask
    sqlalchemy
python_requires = >=3.11

[options.extras_require]
dev =
    black
    mypy
    pre-commit
    psycopg2-binary
test =
    mock
    pytest
    pytest-mock
    types-mock

[options.package_data]
hello_fresh =
    py.typed

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-test.*]
disallow_untyped_defs = false

[mypy-mock.*]
ignore_missing_imports = true
